Parallelize indexing pipeline with virtual threads and per-host rate limiting
- Upgrade to Java 21 for virtual thread support
- Refactor ResilientHttpClient to use per-host rate limiters (50 req/sec/host)
- Run all 7 datasources concurrently in ToolsIndexProducer, then merge results
- Parallelize URL validation in DownloadUrlValidator with Semaphore(40)
- Parallelize Temurin releases fetching per repository
- Route GraalVM ZIP downloads through ResilientHttpClient for retry/rate-limiting
- Parallelize GraalVM per-release ZIP processing with virtual threads
- Remove unused extractJavaMajorVersionFromUrl and DistributionInfo